experiments/cutouts/protagonist_ranged/v03/README.md
# Protagonist offhand actions — v03

Seeded with `seed-protagonist` from local master `6640106ac621` (approved pass-nine paint, gait, idle, and sword motion). Forked from v02 after the user requested splitting the difference between the original and the threefold enlargement. This is the final integrated case, at twice the original dimensions. Earlier versions and their proof remain intact.

The user's follow-up explicitly requested lifting the arm straight out instead of bending the elbow. Both clips reach almost the complete projected arm length (the raised segments have a direction dot product above 0.99). The front arm reaches across the chest; the rear casting hand reaches clear of the cloak, and the rear shooting arm reaches forward behind the body so its crossbow emerges beside the far shoulder. The rear arm's resting 33px projection is shortened beneath the cloak; extension reveals its near mate's approximately 53px reach while preserving sleeve width and a rigid glove. Cloak-off proof is required to judge that projection change.

All 21 existing joints and original paint remain. `weapon_l` is one additional rigid attachment, registered in the offhand glove. The 84×54 front and 84×64 rear crossbow drawings have independently painted viewpoints, muted walnut/leather/steel, and the same dark pixel contours as the protagonist. Grip and muzzle landmarks are in each layout's `offhand_attachment`; original generator outputs, exact prompts, and the deterministic registration recipe are under `source/`. There is no live inventory or balance change.

The clips describe a 200ms straight-arm preparation, existing effect release/travel, and recovery. `cast` previews the 720ms fire effect for 920ms total; `shoot` previews the 240ms default effect for 440ms total. Other elements retain their own original clocks and use the same authored pose phases. The small hand charge is drawn by the real board during preparation, and existing elemental FX start from the hand when the effect clock begins. The case reel is a skeletal/art study; the gameplay probe proves charge and actual card routing.

`source/accepted_motion.gd` retains the exact production sampler for differential regression checks. Original idle/walk/attack transforms are compared at 25 phases in each facing. The baseline art protection check passed before the intentional addition of attachment layouts; final validation permits those two declared layout additions. Existing rest silhouettes are unchanged because the crossbow is hidden at rest.

Proof commands (run from the isolated task worktree):

```sh
python3 tools/cutout_workflow.py validate experiments/cutouts/protagonist_ranged/v03
python3 tools/cutout_workflow.py render experiments/cutouts/protagonist_ranged/v03 --output /private/tmp/protagonist-ranged-case-v03-accepted --task-id protagonist-spellcast-and-offhand-crossbow-animations
python3 tools/cutout_workflow.py verify-render experiments/cutouts/protagonist_ranged/v03 --output /private/tmp/protagonist-ranged-case-v03-accepted
python3 tools/cutout_workflow.py inspect experiments/cutouts/protagonist_ranged/v03 --task-id protagonist-spellcast-and-offhand-crossbow-animations
```

The crossbow dimensions are exactly twice those in v01, two-thirds of v02. Both were resampled from the retained original generator output, not from the tiny prior sprite. The source-space grip stays fixed; native grip and muzzle coordinates scale with the paint, preserving attachment and release alignment.

Final proof is in `review/`, including `gameplay_preview.mp4`, `cutout_review.mp4`, front/rear editable scenes, whole-cycle contact sheets with cloak-off poses, real gameplay stills, verified input/output manifests, and test/export logs. Gameplay input/output proof covers 15 actual card actions and a follow-up capturing both reduced-motion effects at every renderer frame. All checks pass. The fresh full native capture is `/private/tmp/protagonist-ranged-case-v03-accepted`; the main real-gameplay runner manifest is `/private/tmp/protagonist-ranged-gameplay-v05-result.json`.

For continued work: use `$create-labyrinth-cutout`, fork this v03 case, preserve the straight offhand reach and the current 84×54/84×64 crossbow registration, and inspect both viewpoints and live board socket alignment before final proof. Do not revert to the smaller v01 or larger v02 artwork.
